# Thyra

./: README.md  excal.excalidraw  fig.excalidraw
Gateway/thyra_gateway/: Cargo.toml  config.yaml
Gateway/thyra_gateway/src/: main.rs
main_dir/thyra/: Cargo.toml
main_dir/thyra/src/: main.rs  self_middleware.rs
main_dir/thyra_server/src/: handlers.rs  main.rs  self_middleware.rs
main_dir2/thyra_gateway/: Cargo.toml
main_dir2/thyra_gateway/src/: main.rs
servers/auth/auth_server/: Cargo.toml
servers/auth/auth_server/src/: handlers.rs  main.rs  models.rs  route.rs
servers/users/users_server/: Cargo.toml
servers/users/users_server/src/: handlers.rs  main.rs
