[package]
name = "thyra_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio={version="1",features=["full"]}
hyper={version="1",features=["full"]}

hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "server",
    "http1",
    "tokio"
    ]}
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
