[package]
name = "axum_test_"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8.7"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
