[package]
name = "auth_server"
version = "0.1.0"
edition = "2024"

[dependencies]

axum="0.8.7"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs","trace"] }
